# bizarre-language-experiments

nupi/: README.md  nupi.cabal
nupi/app/: Main.hs
nupi/examples/: Sessions.hs  Streams.hs
nupi/src/NuPi/: Eval.hs  Examples.hs  Pretty.hs  Syntax.hs  TypeCheck.hs  Types.hs
nupi/test/: EvalTests.hs  IntegrationTests.hs  Main.hs  TypeCheckTests.hs
